Implemented login page Need to fix detection issue